// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Avatar/> should have the right class names 1`] = `
<span
  className="slds-avatar slds-avatar_medium"
>
  <span
    className="slds-icon_container slds-icon-standard-user"
  >
    <svg
      aria-hidden={true}
      className="slds-icon"
    >
      <use
        href="/icons/standard-sprite/svg/symbols.svg#user"
        xmlnsXlink="http://www.w3.org/1999/xlink"
      />
    </svg>
  </span>
</span>
`;

exports[`<Avatar/> should have the right class names when size is large 1`] = `
<span
  className="slds-avatar slds-avatar_large"
>
  <span
    className="slds-icon_container slds-icon-standard-user"
  >
    <svg
      aria-hidden={true}
      className="slds-icon"
    >
      <use
        href="/icons/standard-sprite/svg/symbols.svg#user"
        xmlnsXlink="http://www.w3.org/1999/xlink"
      />
    </svg>
  </span>
</span>
`;

exports[`<Avatar/> should have the right class names when size is medium 1`] = `
<span
  className="slds-avatar slds-avatar_medium"
>
  <span
    className="slds-icon_container slds-icon-standard-user"
  >
    <svg
      aria-hidden={true}
      className="slds-icon"
    >
      <use
        href="/icons/standard-sprite/svg/symbols.svg#user"
        xmlnsXlink="http://www.w3.org/1999/xlink"
      />
    </svg>
  </span>
</span>
`;

exports[`<Avatar/> should have the right class names when size is small 1`] = `
<span
  className="slds-avatar slds-avatar_small"
>
  <span
    className="slds-icon_container slds-icon-standard-user"
  >
    <svg
      aria-hidden={true}
      className="slds-icon"
    >
      <use
        href="/icons/standard-sprite/svg/symbols.svg#user"
        xmlnsXlink="http://www.w3.org/1999/xlink"
      />
    </svg>
  </span>
</span>
`;

exports[`<Avatar/> should have the right class names when variant is circle and size is x-small 1`] = `
<span
  className="slds-avatar slds-avatar_circle slds-avatar_x-small"
>
  <span
    className="slds-icon_container slds-icon-standard-user"
  >
    <svg
      aria-hidden={true}
      className="slds-icon"
    >
      <use
        href="/icons/standard-sprite/svg/symbols.svg#user"
        xmlnsXlink="http://www.w3.org/1999/xlink"
      />
    </svg>
  </span>
</span>
`;
